<resources>
    <string name="app_name">KidDOS</string>
    <string name="preview_photo">Preview Photo</string>
    <string name="register_face">Register Face</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="face_detected">Face Detected</string>
    <string name="no_face_detected">No Face Detected!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="token">Token</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="check_password">Check Password</string>
    <string name="your_name">Your Name</string>
    <string name="register">Register</string>
    <string name="go_to_login">Already Registered? Login Here</string>
    <string name="go_to_register">Don\'t Have an Account? Register Here</string>
    <string name="login">login</string>
    <string name="text_login">Login</string>
</resources>